--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "element-ui": "^2.12.0",
+    "es6-promise": "^4.2.8",
+    "hchs-vue-charts": "^1.2.8",
+    "moment": "^2.24.0",
+    "vue": "^2.6.10",
+    "vue-momentjs": "^0.1.2",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
